created get route and sql data

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-SERVER_PORT=5000
+SERVER_PORT=4000
 
 DB_HOST=localhost
-DB_PORT=3309
+DB_PORT=3306
 DB_USER=root
 DB_PASS=root
-DB_NAME=products_db
+DB_NAME=cuisine
