--- a/package.json
+++ b/package.json
@@ -8,18 +8,7 @@
     "dev": "nodemon src/server.js",
     "lint": "eslint --quiet --cache --fix .",
     "format": "prettier --write .",
-    "test": "jest --detectOpenHandles",
-    "prepare": "husky install",
-    "test:watch": "jest --watchAll"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "<rootDir>/tests/setupTests.js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -27,10 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "jest": "^27.5.1",
-    "joi": "^17.6.0",
-    "mysql2": "^2.3.3",
-    "supertest": "^6.2.2"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
