modified vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "./src/app.js",
-      "use": "@now/node"
+      "src": "/src/app.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       // Specify which paths will route to a destination using a regex
-      "src": "./src",
+      "src": "/src/(.*)",
       // Specify the paths' destination
-      "dest": "./src/app.js"
+      "dest": "/src/app.js"
     }
   ]
 }
