modified vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "/src/index.js",
+      "src": "/src/app.js",
       "use": "@vercel/node"
     }
   ],
@@ -11,7 +11,7 @@
       // Specify which paths will route to a destination using a regex
       "src": "/src/(.*)",
       // Specify the paths' destination
-      "dest": "/src/index.js"
+      "dest": "/src/app.js"
     }
   ]
 }
