modified vercel file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checkpoint4-react-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",x
+  "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
