--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": ["/", "/test"],
+      "src": "/(.*)",
       "dest": "src/server.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"]
     }
